# DMOS5031-ESP32-LCD

./: Build_step.txt  CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults  start_env.ps1
main/: CMakeLists.txt  main.c
main/BAT_Driver/: BAT_Driver.h
main/DMOS5031/: dmos5031.c  dmos5031.h  dmos5031_frame.c  dragonfly.c  dragonfly.h
main/LCD_Driver/: ST7789.c  ST7789.h
main/LVGL_Driver/: LVGL_Driver.c  LVGL_Driver.h
main/LVGL_UI/: LVGL_Example.c  LVGL_Example.h  LVGL_Heatmap.c  LVGL_Heatmap.h
main/Simulated_Gesture/: Simulated_Gesture.c
